# shader-live-cording

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: README.md  publish.yml  test-build.yml
.tmp/: audio-effects-design.md  design.md  p5js-mode-architecture.md  p5js-mode-sow.md  shader-language-status.md  task.md  test-strategy.md  vj-live-coding-sow.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  generate-icons.sh  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs
src/components/AudioAnalyzer/: AudioAnalyzer.svelte  AudioAnalyzerWithEffects.svelte  AudioAnalyzerWithEffectsFixed.svelte  AudioAnalyzerWithEffectsSimple.svelte
src/components/AudioEffects/: AudioEffects.svelte  AudioEffectsPanel.svelte
src/components/Controls/: Controls.svelte
src/components/Editor/: Editor.svelte
src/components/ExportButton/: ExportButton.svelte
src/components/ExportModal/: ExportModal.svelte  README.md
src/components/GLSLFunctions/: GLSLFunctions.svelte
src/components/KeyboardHelp/: KeyboardHelp.svelte
src/components/PresetModal/: PresetModal.svelte
src/components/Preview/: Preview.svelte
src/components/ProjectModal/: ProjectModal.svelte  index.ts
src/stores/: appStore.ts  audioStore.ts  databaseStore.ts  projectStore.ts  renderModeStore.ts  vjModeStore.ts
src/test/: helpers.ts  setup.ts
src/types/: audio.ts  global.d.ts  project.ts  shader.ts  window.d.ts
(+34 files in other folders)
